# bastion-contract-scan

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  wsgi.py
src/bastion_scan/: __init__.py  __main__.py  extractor.py  flags.py  patterns.py  readability.py  report.py  scanner.py  web.py
src/bastion_scan/templates/: about.html  index.html
tests/: conftest.py  test_extractor.py  test_flags.py  test_readability.py  test_report.py  test_scanner.py  test_web.py
tests/fixtures/: sample_clean.txt  sample_contract.txt  sample_general.txt
