[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bastion-contract-scan"
version = "1.0.0"
description = "Detect predatory clauses in any contract"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.10.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
web = [
    "flask>=3.0.0",
]

[project.scripts]
bastion-contract-scan = "bastion_scan.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bastion_scan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
